--- a/style.css
+++ b/style.css
@@ -1,20 +1,15 @@
-html, body, div, span, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-abbr, address, cite, code,
-del, dfn, em, img, ins, kbd, q, samp,
-small, strong, sub, sup, var,
-b, i,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section, summary,
-time, mark, audio, video {
-    margin:0;
-    padding:0;
-    border:0;
-    outline:0;
-    font-size:100%;
-    vertical-align:baseline;
-    background:transparent;
+cf-chat-response.show thumb {
+	background-image: url('https://pbs.twimg.com/profile_images/523057560358617088/WWOOMB5q.jpeg') !important;
+}
+
+cf-chat-response:nth-of-type(2n+2).peak-thumb thumb {
+	background-image: url('https://api.monosnap.com/rpc/file/download?id=sJ13NVmuPWHINMXpFooARJXfIkCq2J') !important;
+    }
+
+input.marketing-input {
+	opacity: 0;
+}
+
+.cf-context {
+	height: 400px;
 }
